// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App size select Test get default size filter with actions  1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    .c1 {
  margin-left: 4px;
  margin-right: 4px;
  min-width: 90px !important;
  min-height: 36px !important;
  font-size: 12px;
  border-radius: 24px;
}

.c0 {
  margin: 0 4px;
  display: inline-block;
}

.c0 button {
  border-radius: 4px;
  min-height: 28px !important;
  min-width: 55px !important;
  line-height: 20px;
}

.c0:first-child {
  margin-left: 0;
}

.c0:last-child {
  margin-right: 0;
}

<div>
      <div
        class=""
      >
        <div
          class="c0"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained c1 MuiButton-containedSecondary MuiButton-containedSizeSmall MuiButton-sizeSmall"
            data-testid="size-filter-M"
            mx="4px"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              M
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="c0"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained c1 MuiButton-containedSizeSmall MuiButton-sizeSmall"
            data-testid="size-filter-L"
            mx="4px"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              L
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="c0"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained c1 MuiButton-containedSizeSmall MuiButton-sizeSmall"
            data-testid="size-filter-XS"
            mx="4px"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              XS
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="c0"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained c1 MuiButton-containedSizeSmall MuiButton-sizeSmall"
            data-testid="size-filter-XXL"
            mx="4px"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              XXL
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="c0"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained c1 MuiButton-containedSizeSmall MuiButton-sizeSmall"
            data-testid="size-filter-XL"
            mx="4px"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              XL
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bwzfXH uTxCW"
    >
      <div
        class="sc-htpNat jtYCUb"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained sc-bdVaJa gKhRMU MuiButton-containedSecondary MuiButton-containedSizeSmall MuiButton-sizeSmall"
          data-testid="size-filter-M"
          mx="4px"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            M
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="sc-htpNat jtYCUb"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained sc-bdVaJa gKhRMU MuiButton-containedSizeSmall MuiButton-sizeSmall"
          data-testid="size-filter-L"
          mx="4px"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            L
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="sc-htpNat jtYCUb"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained sc-bdVaJa gKhRMU MuiButton-containedSizeSmall MuiButton-sizeSmall"
          data-testid="size-filter-XS"
          mx="4px"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            XS
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="sc-htpNat jtYCUb"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained sc-bdVaJa gKhRMU MuiButton-containedSizeSmall MuiButton-sizeSmall"
          data-testid="size-filter-XXL"
          mx="4px"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            XXL
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="sc-htpNat jtYCUb"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained sc-bdVaJa gKhRMU MuiButton-containedSizeSmall MuiButton-sizeSmall"
          data-testid="size-filter-XL"
          mx="4px"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            XL
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`App size select Test get default size select  1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    .c1 {
  margin-left: 4px;
  margin-right: 4px;
  min-width: 90px !important;
  min-height: 36px !important;
  font-size: 12px;
  border-radius: 24px;
}

.c0 {
  margin: 0 4px;
  display: inline-block;
}

.c0 button {
  border-radius: 4px;
  min-height: 28px !important;
  min-width: 55px !important;
  line-height: 20px;
}

.c0:first-child {
  margin-left: 0;
}

.c0:last-child {
  margin-right: 0;
}

<div>
      <div
        class=""
      >
        <div
          class="c0"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained c1 MuiButton-containedSizeSmall MuiButton-sizeSmall"
            data-testid="size-filter-M"
            mx="4px"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              M
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="c0"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained c1 MuiButton-containedSizeSmall MuiButton-sizeSmall"
            data-testid="size-filter-L"
            mx="4px"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              L
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="c0"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained c1 MuiButton-containedSecondary MuiButton-containedSizeSmall MuiButton-sizeSmall"
            data-testid="size-filter-XS"
            mx="4px"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              XS
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="c0"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained c1 MuiButton-containedSizeSmall MuiButton-sizeSmall"
            data-testid="size-filter-XXL"
            mx="4px"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              XXL
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="c0"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained c1 MuiButton-containedSizeSmall MuiButton-sizeSmall"
            data-testid="size-filter-XL"
            mx="4px"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              XL
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bwzfXH uTxCW"
    >
      <div
        class="sc-htpNat jtYCUb"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained sc-bdVaJa gKhRMU MuiButton-containedSizeSmall MuiButton-sizeSmall"
          data-testid="size-filter-M"
          mx="4px"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            M
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="sc-htpNat jtYCUb"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained sc-bdVaJa gKhRMU MuiButton-containedSizeSmall MuiButton-sizeSmall"
          data-testid="size-filter-L"
          mx="4px"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            L
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="sc-htpNat jtYCUb"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained sc-bdVaJa gKhRMU MuiButton-containedSecondary MuiButton-containedSizeSmall MuiButton-sizeSmall"
          data-testid="size-filter-XS"
          mx="4px"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            XS
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="sc-htpNat jtYCUb"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained sc-bdVaJa gKhRMU MuiButton-containedSizeSmall MuiButton-sizeSmall"
          data-testid="size-filter-XXL"
          mx="4px"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            XXL
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="sc-htpNat jtYCUb"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained sc-bdVaJa gKhRMU MuiButton-containedSizeSmall MuiButton-sizeSmall"
          data-testid="size-filter-XL"
          mx="4px"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            XL
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`App size select Test get default size select no params  1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class=""
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bwzfXH uTxCW"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
